--- a/client/public/styles/styles.css
+++ b/client/public/styles/styles.css
@@ -46,15 +46,15 @@ h1 {
 }
 
 :-moz-placeholder { /* Firefox 18- */
-   text-align: center;  
+   text-align: center;
 }
 
 ::-moz-placeholder {  /* Firefox 19+ */
-   text-align: center;  
+   text-align: center;
 }
 
-:-ms-input-placeholder {  
-   text-align: center; 
+:-ms-input-placeholder {
+   text-align: center;
 }
 
 /* * * * * * * * * *
@@ -67,7 +67,8 @@ body {
   font-family: lucida grande;
   margin-top: 130px;
   color: #404040;
-  background-color: #f2f2f2;
+  /*background-color: #f4f1f0;*/
+  background: linear-gradient(to right, #d7ccc8, #f4f1f0);
   /*-apple-system, BlinkMacSystemFont, sans-serif;*/
 }
 
@@ -92,16 +93,20 @@ label {
 }
 
 .nav > .title {
-  font-size: 40px;
-  top: 30px;
-  font-family: avenir;
-  letter-spacing: 5px;
   margin-left: 30%;
+  font-family: 'Molle', cursive;
+  text-align: center;
+  font-size: 30px;
+  letter-spacing: 2px;
+  color: #26a69a;
+  text-shadow: -1px 0 #26a69a, 0 1px #26a69a, 1px 0 #26a69a, 0 -1px #26a69a;
 }
 
 .nav > a {
   position: relative;
-  top: 30px;
+  top: 15px;
+  font-weight: normal;
+  font-size: 25px;
   color: #404040;
   margin-left: 40px;
   text-decoration: none;
@@ -117,7 +122,6 @@ label {
 .featureBody {
   margin-left: 23%;
   width: 50%;
-  border: 2px solid #e6e6e6;
   border-radius: 10px;
   background-color: white;
   padding: 20px;
@@ -125,7 +129,7 @@ label {
 }
 
 .listEntry {
-  border: 1px solid #e6e6e6;
+  background-color: #f2f2f2;
   border-radius: 5px;
   padding: 15px;
   margin: 10px;
@@ -141,6 +145,7 @@ label {
   position: relative;
   top: 20px;
   margin-left: 25%;
+  font-size: 10px;
 }
 
 #eventNav {
@@ -158,6 +163,7 @@ label {
   position: relative;
   left: 30%;
   margin: 0 auto;
+  margin-left: 80px;
 }
 
 #eventNav .button {
@@ -225,6 +231,76 @@ tr:nth-child(even) {
 
 .chat {
   list-style-type: none;
+  margin-left: 35%;
+  width: 30%;
+  height: 500px;
+  overflow: scroll;
+  padding-top: 20px;
+  padding-bottom: 20px;
+  background-color: #fff;
+  border-radius: 10px;
+  font-size: 20px;
 }
 
+.chatBtn {
+  margin-left: 45%;
+}
 
+.inviteForm {
+  top: 20px;
+  margin-left: 25%;
+}
+
+.inviteForm > input {
+  padding: 8px;
+  font-size: 14px;
+}
+
+button {
+  background-color: #26a69a;
+  color: #fff;
+  text-shadow: -1px 0 #29b6f6, 0 1px #29b6f6, 1px 0 #29b6f6, 0 -1px #29b6f6;
+  text-decoration-color: #fff;
+  padding: 10px 20px;
+  border: none;
+  display: inline-block;
+  font-size: 14px;
+  margin: 15px;
+  letter-spacing: 1px;
+  border-radius: 5px;
+}
+
+.btn {
+  background-color: #26a69a;
+  color: #fff;
+  text-shadow: -1px 0 #29b6f6, 0 1px #29b6f6, 1px 0 #29b6f6, 0 -1px #29b6f6;
+  text-decoration-color: #fff;
+  padding: 10px 20px;
+  border: none;
+  display: inline-block;
+  font-size: 14px;
+  margin: 15px;
+  border-radius: 5px;
+}
+
+.inviteeTable {
+  margin-left: 0px;
+}
+
+.photoForm {
+  padding-top: 50px;
+  margin-left: 30%;
+}
+
+.photos {
+  margin-left: -30%
+}
+
+h2 {
+  font-style: italic;
+  letter-spacing: 1px;
+}
+
+input {
+  padding: 8px;
+}
